--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
 @charset "utf-8";
 
 /* CSS Document */
+
 #container{
+	position: absolute;
+	height: 100%;
+	width: 100%;
 	background: red;
 }
 
-p{
+p.meat{
 	color: yellow;
+	position: relative;
+	left: 50%;
+	top: 50%;
 }
